@@ -46,6 +46,7 @@ Tools:
 
 20160109
 * worked on Python 3 support
+* worked on win2k3 format support
 
 20160108
 * 2016 update
